[gd_scene load_steps=7 format=2]

[ext_resource path="res://SpriteTesting/Splatter.gd" type="Script" id=1]
[ext_resource path="res://SpriteTesting/SpriteAssets/splatter_1.png" type="Texture" id=2]
[ext_resource path="res://SpriteTesting/SpriteAssets/splatter_2.png" type="Texture" id=3]
[ext_resource path="res://SpriteTesting/SpriteAssets/splatter_3.png" type="Texture" id=4]
[ext_resource path="res://SpriteTesting/SpriteAssets/splatter_4.png" type="Texture" id=5]

[sub_resource type="CircleShape2D" id=1]
radius = 16.4422

[node name="Splatter" type="Node2D"]
script = ExtResource( 1 )

[node name="SpriteHolder" type="Node2D" parent="."]

[node name="Sprite1" type="Sprite" parent="SpriteHolder"]
position = Vector2( -45.09, -47.245 )
scale = Vector2( 0.2, 0.2 )
texture = ExtResource( 2 )
__meta__ = {
"_edit_lock_": true
}

[node name="Sprite2" type="Sprite" parent="SpriteHolder"]
position = Vector2( 50.8758, -40.9989 )
scale = Vector2( 0.2, 0.2 )
texture = ExtResource( 3 )
__meta__ = {
"_edit_lock_": true
}

[node name="Sprite3" type="Sprite" parent="SpriteHolder"]
position = Vector2( -39.39, 36.3753 )
scale = Vector2( 0.2, 0.2 )
texture = ExtResource( 4 )
__meta__ = {
"_edit_lock_": true
}

[node name="Sprite4" type="Sprite" parent="SpriteHolder"]
position = Vector2( 49.1924, 48.529 )
scale = Vector2( 0.2, 0.2 )
texture = ExtResource( 5 )
__meta__ = {
"_edit_lock_": true
}

[node name="Check" type="Area2D" parent="."]

[node name="Col1" type="CollisionShape2D" parent="Check"]
position = Vector2( -28.7316, -25.8572 )
shape = SubResource( 1 )

[node name="Col2" type="CollisionShape2D" parent="Check"]
position = Vector2( 25.5842, -26.5545 )
shape = SubResource( 1 )

[node name="Col3" type="CollisionShape2D" parent="Check"]
position = Vector2( -26.1102, 26.3966 )
shape = SubResource( 1 )

[node name="Col4" type="CollisionShape2D" parent="Check"]
position = Vector2( 25.6417, 26.5544 )
shape = SubResource( 1 )
[connection signal="area_shape_entered" from="Check" to="." method="_on_TLCheck_area_shape_entered"]
